infra/k3s/applications/match/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match
  namespace: app
  labels:
    app: match
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: match
