infra/k3s/applications/match/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: match
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    # 1) If Authorization header exists -> run forwardAuth
    - kind: Rule
      match: Host(`api.gaegaeting.app`) && PathPrefix(`/match`) && HeadersRegexp(`Authorization`, `.+`)
      priority: 1000
      middlewares:
        - name: match-forwardauth
      services:
        - name: match
          port: 3000

    # 2) Otherwise -> pass through without forwardAuth (public)
    - kind: Rule
      match: Host(`api.gaegaeting.app`) && PathPrefix(`/match`)
      priority: 900
      services:
        - name: match
          port: 3000
  tls:
    secretName: match-tls
