infra/k3s/applications/match/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: match
  namespace: app
spec:
  hosts:
    - api.gaegaeting.app
  gateways:
    - istio-system/api-gateway
  http:
    - match:
        - uri:
            prefix: /match
      route:
        - destination:
            host: match.app.svc.cluster.local
            port:
              number: 3000
